catkin_w_s/logs/dd_stl_stt/build.make.055.log
[35m[1mScanning dependencies of target dd_stl_stt[0m
[ 14%] [32mBuilding CXX object CMakeFiles/dd_stl_stt.dir/src/scripts/STT_Controller.cpp.o[0m
/home/subho/catkin_w_s/src/dd_stl_stt/src/scripts/STT_Controller.cpp: In member function ‘void Controller::follow_stt()’:
/home/subho/catkin_w_s/src/dd_stl_stt/src/scripts/STT_Controller.cpp:88:9: error: ‘offboard’ was not declared in this scope
   88 |         offboard((x_u[time] + x_l[time])/2, (y_u[time] + y_l[time])/2, (z_u[time] + z_l[time])/2);
      |         ^~~~~~~~
make[2]: *** [CMakeFiles/dd_stl_stt.dir/build.make:102: CMakeFiles/dd_stl_stt.dir/src/scripts/STT_Controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:229: CMakeFiles/dd_stl_stt.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
